# skir-cc-gen

./: .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json  pre_commit.sh
client/: BUILD.bazel  CMakeLists.txt  MODULE.bazel  skir.cc  skir.h  skir.testing.h
e2e-test/: BUILD.bazel  CMakeLists.txt  reserializer.testing.h  skir.cc  skir.h  skir.test.cc  skir.yml  skir_goldens.test.cc  skir_service.test.cc  skirout.test.cc
e2e-test/skir-src/: constants.skir  enums.skir  full_name.skir  methods.skir  reflection.skir  structs.skir
e2e-test/skir-src/vehicles/: car.skir
src/: enum_field.ts  enum_variant.ts  index.ts  recursivity_resolver.ts  type_speller.ts
