cc_library(
    name = "skir",
    srcs = ["skir.cc"],
    hdrs = ["skir.h"],
    deps = [
        "@abseil-cpp//absl/base",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/hash",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/log:die_if_null",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/time",
        "@abseil-cpp//absl/types:optional",
        "@abseil-cpp//absl/types:variant",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "skir.testing",
    testonly = True,
    srcs = [],
    hdrs = ["skir.testing.h"],
    deps = [
        ":skir",
        "@abseil-cpp//absl/base",
        "@abseil-cpp//absl/log:die_if_null",
        "@googletest//:gtest",
    ],
    visibility = ["//visibility:public"],
)
