cc_library(
    name = "reserializer.testing",
    testonly = True,
    hdrs = ["reserializer.testing.h"],
    deps = [
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/types:optional",
    ],
)

cc_library(
    name = "skir",
    srcs = ["skir.cc"],
    hdrs = ["skir.h"],
    # When changing the dependencies, make sure to modify client/BUILD.bazel
    deps = [
        "@abseil-cpp//absl/base",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/hash",
        "@abseil-cpp//absl/log:absl_check",
        "@abseil-cpp//absl/log:die_if_null",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/time",
        "@abseil-cpp//absl/types:optional",
        "@abseil-cpp//absl/types:variant",
    ],
)

cc_test(
    name = "skir.test",
    size = "small",
    srcs = ["skir.test.cc"],
    deps = [
        ":skir",
        ":reserializer.testing",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:status_matchers",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "skir.testing",
    testonly = True,
    srcs = [],
    hdrs = ["skir.testing.h"],
    # When changing the dependencies, make sure to modify client/BUILD.bazel
    deps = [
        ":skir",
        "@abseil-cpp//absl/base",
        "@abseil-cpp//absl/log:die_if_null",
        "@googletest//:gtest",
    ],
)

cc_test(
    name = "skir_service.test",
    size = "small",
    srcs = ["skir_service.test.cc"],
    deps = [
        ":skir",
        ":skir.testing",
        ":skirout",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/status:status_matchers",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@cpp-httplib//:httplib",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "skirout",
    srcs = glob(["skirout/**/*.cc"]),
    hdrs = glob(["skirout/**/*.h"]),
    deps = [
        ":skir",
    ],
)

cc_test(
    name = "skirout.test",
    size = "small",
    srcs = ["skirout.test.cc"],
    deps = [
        ":reserializer.testing",
        ":skir.testing",
        ":skir",
        ":skirout",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:status_matchers",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "skir_goldens.test",
    size = "small",
    srcs = ["skir_goldens.test.cc"],
    deps = [
        ":skir",
        ":skirout",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
